tests/baselines/reference/classAbstractWithInterface.errors.txt
classAbstractWithInterface.ts(1,1): error TS1242: 'abstract' modifier can only appear on a class, method, or property declaration.


==== classAbstractWithInterface.ts (1 errors) ====
    abstract interface I {}
    ~~~~~~~~
!!! error TS1242: 'abstract' modifier can only appear on a class, method, or property declaration.